Fix dropzone helper on mobile

--- a/src/components/AddMovie/Dropzone.scss
+++ b/src/components/AddMovie/Dropzone.scss
@@ -15,6 +15,7 @@
 		cursor: default;
 		display: flex;
 		align-items: center;
+		justify-content: center;
 		svg {
 			margin-right: 16px;
 		}
@@ -64,7 +65,9 @@
 	}
 	.dropzone {
 		&__helper {
+			width: 100%;
 			margin-bottom: 40px;
+			padding: 30px 20px;
 		}
 		&__loading {
 			& > p:first-child {
